[package]
name = "blueblips-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blueblips-bridge"
path = "src/main.rs"

[dependencies]
librespot-core     = "0.4"
librespot-playback = "0.4"
librespot-protocol = "0.4"
tokio              = { version = "1", features = ["full"] }
warp               = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
log                = "0.4"
env_logger         = "0.10"
